<resources>
    <!--common-->

    <string name="no_internet_exist">Internet Not Available.</string>
    <string name="lawyer_category">Category</string>

    <string name="app_name">LexLink</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--error messsage-->
    <string name="user_sign_up_failed">User Sign Up Failed Please Try Again.</string>


    <!--enter messsage-->

    <string name="enter_valid_email">Enter Valid Email.</string>


    <!--login-->

    Salutation First Name Middle Name Last Name Address City Post Code

    Create Profile
    <!--register-->
    <string name="create_profile">Create Profile</string>
    <string name="salutation">Salutation</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="post_code">Post Code</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_password_does_not_valid">Email Or PassWord Invalid.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Home -->

    <string name="home">Home</string>
    <string name="feeds">Feeds</string>
    <string name="ongoing_claims">Ongoing Claims</string>
    <string name="past_claims">Past Claims</string>
    <string name="notificaitons">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_feed">FeedActivity</string>

    <!--client home-->
    <string name="client_home_my_profile">Me</string>
    <string name="client_home_my_claim">My Claims</string>
    <string name="client_home_notification">Notifications</string>
    <string name="client_home_search_lawyer">Search Lawyers</string>
    <string name="client_home_create_case">Create Case</string>
</resources>
