<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_ingrey_bg"
    tools:context="lexlink.app.com.lexlink.activities.SignUpActivity">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="@dimen/twenty_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:background="@color/blue">

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/lawyer_image"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp" />

            <ImageView
                android:id="@+id/signup_iv_camera"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="90dp"
                android:src="@drawable/camera" />

            <lexlink.app.com.lexlink.baseviews.BaseTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="170dp"
                android:text="@string/create_profile"
                android:textColor="@color/white"
                android:textSize="@dimen/text_20" />
        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/salutation" />
            <lexlink.app.com.lexlink.baseviews.BaseEdittext
                android:id="@+id/signup_et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />
            <lexlink.app.com.lexlink.baseviews.BaseEdittext
                android:id="@+id/signup_et_middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/middle_name"
                android:inputType="textPersonName" />

            <lexlink.app.com.lexlink.baseviews.BaseEdittext
                android:id="@+id/signup_et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />
            <lexlink.app.com.lexlink.baseviews.BaseEdittext
                android:id="@+id/signup_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textPersonName" />

            <lexlink.app.com.lexlink.baseviews.BaseEdittext
                android:id="@+id/signup_et_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/password"
                android:inputType="textPassword" />


            <lexlink.app.com.lexlink.baseviews.BaseEdittext
                android:id="@+id/signup_et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:maxLines="2" />
            <Spinner
                android:id="@+id/spinner12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/salutation" />
            <lexlink.app.com.lexlink.baseviews.BaseEdittext
                android:id="@+id/signup_et_post_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_code"
                android:inputType="number"
                android:maxLines="2" />
            
            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/blue"
                android:text="@string/create_profile"
                android:textColor="@color/white" />
        </LinearLayout></ScrollView>
    </LinearLayout>
</RelativeLayout>
