<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_bg"
    android:clickable="true"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:id="@+id/nav_home_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_footer_slidemenu"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/home_icon" />

                <TextView
                    android:id="@+id/txtMenuHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_feed_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_feed_slidemenu"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/feeds_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/feeds"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_ongoing_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_ongoing_slidemenu"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ongoing_claims_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/ongoing_claims"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/nav_pastclaim_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_pastclaim_slidemenu"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/past_claims_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/past_claims"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_notification_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_notification_slidemenu"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/notifications_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/notificaitons"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_myprofile_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_myprofile_slidemenu"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/my_profile_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/my_profile"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
