<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/home_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/lawyer_image"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/home_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="Welcome Mr.Harvey Specter!"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/home_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/home_icon" />

                <TextView
                    android:id="@+id/txtMenuHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/feed_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/feeds_icon" />

                <TextView
                    android:id="@+id/txtMenuFeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/feeds"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ongoing_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ongoing_claims_icon" />

                <TextView
                    android:id="@+id/txtMenuOngoing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/ongoing_claims"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <!--  -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/pastClaim_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/past_claims_icon" />

                <TextView
                    android:id="@+id/txtMenuPastClaim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/past_claims"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notification_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/notifications_icon" />

                <TextView
                    android:id="@+id/txtMenuNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/notificaitons"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/MyProfile_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/my_profile_icon" />

                <TextView
                    android:id="@+id/txtMenuMyProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/my_profile"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
