<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_blue_bg">
    <ToggleButton
        android:id="@+id/login_toggle"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_toggle"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_toggle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical">
        <lexlink.app.com.lexlink.baseviews.BaseEdittext
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/login_text_color" />
        <lexlink.app.com.lexlink.baseviews.BaseEdittext
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/login_text_color" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <lexlink.app.com.lexlink.baseviews.BaseTextview
                android:id="@+id/login_frogot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
                android:text="Forgot Password?"
                android:textColor="@color/login_text_color" />
            <lexlink.app.com.lexlink.baseviews.BaseTextview
                android:id="@+id/login_reset_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:text="Reset Password"
                android:textColor="@color/login_text_color" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/button_bg"
            android:text="Sign in"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/button_bg"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18" />
    </LinearLayout>
</RelativeLayout>
